# KokCiu-StockView

./: eslint.config.js  package-lock.json  package.json  vite.config.ts
data/: database.sql  database.sqlite
src/: App.tsx  DebugReference.tsx  index.css  main.tsx
src-tauri/: 2  Cargo.toml  rustfmt.toml  stockview.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
