[package]
name = "stockview"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stockview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri-plugin-fs = { version = "2.0.0-alpha" }
csv = "1.3"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
tower-http = { version = "0.5", features = ["cors"] }
calamine = "0.22"
tauri-plugin-dialog = "2"
tauri-plugin-log = { version = "2", features = ["colored"] }
thiserror = "1.0"
itertools = "0.13"
fontdue = "0.8"
font-kit = "0.11"

[alias]
lint = "clippy --all-targets --all-features -- -D warnings"
fmt = "fmt --all"
