[package]
name = "stockview"
version = "1.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stockview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Update the alpha version to the stable v2 release line
tauri-plugin-fs = "2"

# Ensure these match your 2.10.x / 2.6.x / 2.8.x frontend packages smoothly
tauri = { version = "2.10", features = [] }
tauri-plugin-dialog = "2.6"
tauri-plugin-log = { version = "2.8", features = ["colored"] }

# Your other dependencies can stay exactly as they are
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
tower-http = { version = "0.5", features = ["cors"] }
calamine = "0.22"
thiserror = "1.0"
itertools = "0.13"
fontdue = "0.8"
font-kit = "0.11"
chrono = "0.4.42"

[alias]
lint = "clippy --all-targets --all-features -- -D warnings"
fmt = "fmt --all"
